# digital-pet

./: .env.example  .gitignore  CMakeLists.txt  Makefile  README.md  device-spec.json
audio/: API.md  CMakeLists.txt  LICENSE  NOTICE  README.md  package.xml  test.yaml
audio/examples/: audio_demo.cpp
audio/include/: audio_base.hpp  audio_duplex.hpp  audio_resampler.hpp
audio/include/internal/: audio_duplex_stream.hpp  audio_stream.hpp
audio/python/: pyproject.toml  setup.py
audio/python/examples/: audio_demo.py
audio/python/spacemit_audio/: __init__.py
audio/python/src/: bindings.cpp
audio/src/: audio_duplex_stream.cpp  audio_stream.cpp  resampler.cpp  resampler_rvv.cpp  spacemit_audio.cpp  spacemit_audio_duplex.cpp
audio/tests/: audio_pr_contract_test.cpp  test_invalid_input_error_path.sh  test_manual_device_smoke.sh  test_resampler_contract.sh
cmake/toolchains/: linux-arm64.cmake  linux-x86_64.cmake  macos-arm64.cmake  macos-universal.cmake  macos-x86_64.cmake
examples/: CMakeLists.txt  basic_device.c  voice_chat.c  voice_chat.cpp
include/device_agent/: client.h  vision_client.h  voice_client.h
motor_pwm/: CMakeLists.txt
motor_pwm/include/: motor.h
motor_pwm/src/: motor_core.c  motor_core.h
motor_pwm/src/drivers/: drv_pwm_RoHS.c  drv_pwm_generic.c
motor_pwm/tests/: test_motor_pwm.c
src/: client.c  main.c  pet_motors.c  pet_motors.h  vision_client.c  voice_client.c
