[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "cmake>=3.18",
]
build-backend = "setuptools.build_meta"

[project]
name = "spacemit_audio"
version = "1.0.0"
description = "SpacemitAudio - Audio capture and playback library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "muggle", email = "promuggle@gmail.com"}
]
keywords = ["audio", "capture", "playback", "portaudio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/muggle/audio"
